.apex/unpackaged/objects/rh2__PS_Rollup_Conditions__c.object
<CustomObject>
    <description>Used as filter criteria for a rollup defined with Rollup Helper</description>
    <fields>
        <fullName>rh2__Condition__c</fullName>
        <description>Filter value to apply to the filter field.</description>
        <label>Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Field_Type__c</fullName>
        <label>zDeprecated</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Field__c</fullName>
        <description>Name of field to filter on.</description>
        <label>zDeprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__ImportId__c</fullName>
        <externalId>true</externalId>
        <label>Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Logic__c</fullName>
        <description>Comparison operator</description>
        <label>JSON Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Rollup_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Rollup_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipName>Rollup_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__XRef__c</fullName>
        <description>Reference to rollup helper setting.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Describe</label>
    <listViews>
        <fullName>rh2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rollup Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Describes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>